# ozon-rust-suite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  edgeone.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: ci.yml  local-node-release.yml
apps/cloud-api/: Cargo.toml
apps/cloud-api/migrations/: 0001_initial.sql  0002_nebula_identity.sql  0003_skybridge_nebula_source.sql  0004_identity_anchor_constraint.sql  0005_payment_providers.sql  0006_device_binding_reset.sql
apps/cloud-api/src/: main.rs
apps/local-node/: Cargo.toml  index.html  package.json
apps/local-node/scripts/: stage-sidecar.mjs
apps/local-node/src/: i18n.ts  main.rs  main.tsx  model_router.rs  styles.css  video_dialect.rs
apps/local-node/src-tauri/: Cargo.toml  tauri.conf.json
apps/local-node/src-tauri/src/: main.rs
apps/nebula-dev-issuer/: Cargo.toml
apps/nebula-dev-issuer/src/: main.rs
apps/web-admin/: index.html  package.json  vite.config.ts
apps/web-admin/src/: main.tsx  styles.css
apps/web-portal/: index.html  package.json  vercel.json  vite.config.ts
apps/web-portal/public/: customer-guide.html
apps/web-portal/public/openclaw/: manifest.json
apps/web-portal/scripts/: validate-production-env.mjs
apps/web-portal/src/: CustomerGuide.tsx  LanguageSwitch.tsx  i18n.ts  main.tsx  skybridgeAuth.ts  styles.css
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/entitlement-client/: Cargo.toml
crates/entitlement-client/src/: lib.rs
crates/ozon-connector/: Cargo.toml
crates/ozon-connector/src/: lib.rs
crates/secret-store/: Cargo.toml
crates/secret-store/src/: lib.rs
crates/task-engine/: Cargo.toml
crates/task-engine/src/: lib.rs
deploy/: .env.api-cn.example  .env.ozon66.example  .env.portal-mainland.example  Caddyfile  Caddyfile.api-cn  docker-compose.api-cn.yml  docker-compose.ozon66.yml  docker-compose.yml  nginx.portal-mainland.conf
docs/: competitor-checklist.md  mainland-production-line.md  security-review.md
openclaw/: manifest.json  tools.md
openclaw/examples/: dry-run-price.json  product-get.json
openclaw/local-bridge/: index.js  openclaw.plugin.json  package.json
openclaw/local-bridge/src/: config-store.js  local-http.js
scripts/: build-portal-mainland.mjs  publish-macos-dmg.sh
tools/ozon-excel-core/: .env.example  .gitignore  README.md  fields.example.yaml  pyproject.toml  requirements.txt
tools/ozon-excel-core/scripts/: demo_real.py  push_ozon.py
tools/ozon-excel-core/src/ozon_excel_core/: __init__.py  __main__.py  cli.py  config.py  errors.py  extract.py  header.py  hosting.py  imagegen.py  images.py  inject.py  mapper.py  model.py  ozon_api.py  preflight.py  sample.py  textgen.py  verifier.py  writer.py
tools/ozon-excel-core/src/ozon_excel_core/transforms/: __init__.py  example.py  identity.py  relist.py
tools/ozon-excel-core/tests/: conftest.py  test_cli.py  test_extract.py  test_header.py  test_images.py  test_inject.py  test_mapper.py  test_noop.py  test_push_ozon.py  test_relist.py  test_sample.py  test_transform.py  test_verifier.py  test_writer.py
tools/ozon-suite-qa/: Cargo.toml
tools/ozon-suite-qa/src/: main.rs
