[workspace]
members = [
  "apps/cloud-api",
  "apps/local-node",
  "apps/local-node/src-tauri",
  "apps/nebula-dev-issuer",
  "crates/domain",
  "crates/entitlement-client",
  "crates/ozon-connector",
  "crates/secret-store",
  "crates/task-engine",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Proprietary"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
keyring = "4.0.0"
keyring-core = "1.0.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust_decimal = { version = "1", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1"
