[package]
name = "ozon-cloud-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
ozon-domain = { path = "../../crates/domain" }
ozon-secret-store = { path = "../../crates/secret-store" }
rand.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
