[package]
name = "ozon-cloud-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
ozon-domain = { path = "../../crates/domain" }
rand.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest.workspace = true
rsa = { version = "0.9.10", features = ["sha2", "pem"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
