[package]
name = "ozon-local-node"
version = "0.1.18"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures-core.workspace = true
hex.workspace = true
hmac.workspace = true
ozon-connector = { path = "../../crates/ozon-connector" }
ozon-domain = { path = "../../crates/domain" }
ozon-secret-store = { path = "../../crates/secret-store" }
ozon-task-engine = { path = "../../crates/task-engine" }
reqwest = { workspace = true, features = ["multipart"] }
rsa = { version = "0.9.10", features = ["sha2", "pem"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
