[package]
name = "ozon-local-node-tauri"
version = "0.1.0"
description = "Ozon Rust Suite local configuration center"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

